--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "motion": "^11.11.17",
-    "next": "15.0.1",
+    "next": "^16.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
