--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@next/third-parties": "^16.0.1",
     "@react-spring/web": "^9.7.5",
     "ai": "^2.2.31",
     "class-variance-authority": "^0.7.0",
